# aoe2-image-description-genearator-for-streamers

./: .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  config.example.yaml  config.yaml  extract_data.py  fonts.py  generate_images.py  pyproject.toml  requirements.txt  styles.css
.github/workflows/: pages.yml
.miloc/: .manager_memory.md  changelog.md  goal.md  roadmap.md
docs/: TECHNICAL_SOLUTION.md
docs/commands/: README.md
scripts/: unique_unit_audit.py
src/aoe2civgen/: aoe2_bonus_icons.py  aoe2_helptext.py  block_render.py  cli.py  extract_data.py  fonts.py  generate_images.py  paths.py  server.py  site_layout.py
templates/: README.md
